--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <title>My Website's Name</title>
 
     <!-- The website stylesheet -->
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="./style.css" />
 
     <!-- The website JavaScript file -->
-    <script src="/script.js" defer></script>
+    <script src="./script.js" defer></script>
   </head>
   <body>
      <h1>
@@ -31,6 +31,6 @@
     </p>
     <!-- Image tag is below -->
     <img src="./assets/gifs/1asp101.gif">
-    
+
     </body>
 </html>
